Show the item on page

--- a/app/views/food_item/show.html.erb
+++ b/app/views/food_item/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Food Item you requested</h1>
-<p>I heard you like the things with id <%= @id_requested %></p>
+
+<p>It comes from <strong><%= @item.restaurant_name %></strong> at the smokin' hot price of <%= @item.price %></p>
+<p>Harry gives it a <%= @item.harrys_choice ? "THUMBS UP" : "THUMBS DOWN" %></p>
+<p><%= image_tag @item.photo_path %></p>
